# InfiniteDream

./: .gitignore  COMPETITIVE_ANALYSIS.md  DESIGN.md  README.md  main.py  pyproject.toml
desktop/: Cargo.toml  tauri.conf.json
desktop/ui/: index.html
scripts/: start.sh
src/infinite_dream/: cli.py  config.py  main.py
src/infinite_dream.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/infinite_dream/adapters/: anthropic_llm.py  base.py  factory.py  kling.py  llm.py  minimax.py  mock_video.py  runway.py
src/infinite_dream/core/: audio.py  compositor.py  enhancer.py  exporter.py  extractor.py  orchestrator.py  parser.py  pipeline.py  prompt.py  splitter.py  stages.py  style.py
src/infinite_dream/models/: __init__.py  project.py
src/infinite_dream/utils/: ffmpeg.py
tests/fixtures/: sample_script_en.txt  sample_script_zh.txt
tests/integration/: test_e2e_pipeline.py
tests/unit/: test_adapters.py  test_config.py  test_factory.py  test_models.py  test_pipeline.py  test_postprod.py
