[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infinite_dream"]

[project]
name = "infinite-dream"
version = "0.1.0"
description = "AI-driven long-form video production engine — from script to final cut"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "httpx>=0.28",
    "ffmpeg-python>=0.2",
    "openai>=1.60",
    "anthropic>=0.45",
    "celery[redis]>=5.4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "boto3>=1.36",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "rich>=13.9",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "respx>=0.22",
]

[project.scripts]
infinite-dream = "infinite_dream.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
